--- a/about-us.html
+++ b/about-us.html
@@ -33,7 +33,7 @@
     <header class="header__main">
         <div class="navbar">
             <div class="brand_logo">
-               <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
+                <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
             </div>
             <nav id="navMenu">
                 <ul>
@@ -80,7 +80,7 @@
                     <img src="assets/images/services/about-us-1.jpg" alt="" />
                 </div>
                 <div class="about__images--right" data-aos="fade-up" data-aos-duration="1200">
-                    <img src="assets/images/services/about-us-2.avif" alt="" />
+                    <img src="assets/images/services/about-us-2.png" alt="" />
                 </div>
             </div>
         </div>
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                 </div>
-                 <div class="plumbing__expert--card">
+                <div class="plumbing__expert--card">
                     <div class="plumbing__expert--imgges">
                         <img src="assets/images/services/plumbing__expert-3.png" alt="" />
                     </div>
@@ -206,7 +206,7 @@
                         </div>
                     </div>
                 </div>
-               
+
             </div>
         </div>
     </section>
@@ -274,7 +274,7 @@
                 <!-- Brand Column -->
                 <div class="footer-brand">
                     <div class="footer-brand__logo">
-                         <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
+                        <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
                     </div>
                     <p class="footer-brand__description">
                         Fast, reliable & professional 24/7 plumbing & rooter services.
@@ -287,7 +287,7 @@
                     <ul class="footer-column__list">
                         <li><a href="index.html" class="footer-column__link">Home</a></li>
                         <li><a href="index.html#location__section" class="footer-column__link">Location</a></li>
-                        <li><a href="index.html#services" class="footer-column__link">Services</a></li>
+                        <li><a href="services.html" class="footer-column__link">Services</a></li>
                         <li><a href="index.html#faqs" class="footer-column__link">FAQ</a></li>
                     </ul>
                 </div>
@@ -369,7 +369,8 @@
                         <div class="contact-info">
                             <h4 class="contact-info__label">Email</h4>
                             <p> <a href="mailto:hallo.test@gmail.com"
-                                    class="footer-column__link">hallo.test@gmail.com</a></p>
+                                    class="footer-column__link">hallo.test@gmail.com</a>
+                            </p>
                         </div>
                     </div>
                 </div>
