--- a/contact-us.html
+++ b/contact-us.html
@@ -245,8 +245,6 @@
     </section>
 
     <!-- Faqs section End -->
-
-
     <!-- Footer Section Start -->
     <footer class="footer" data-aos="fade-up" data-aos-duration="1200">
         <div class="footer__container">
@@ -268,7 +266,7 @@
                     <ul class="footer-column__list">
                         <li><a href="index.html" class="footer-column__link">Home</a></li>
                         <li><a href="index.html#location__section" class="footer-column__link">Location</a></li>
-                        <li><a href="index.html#services" class="footer-column__link">Services</a></li>
+                        <li><a href="services.html" class="footer-column__link">Services</a></li>
                         <li><a href="index.html#faqs" class="footer-column__link">FAQ</a></li>
                     </ul>
                 </div>
@@ -350,7 +348,8 @@
                         <div class="contact-info">
                             <h4 class="contact-info__label">Email</h4>
                             <p> <a href="mailto:hallo.test@gmail.com"
-                                    class="footer-column__link">hallo.test@gmail.com</a></p>
+                                    class="footer-column__link">hallo.test@gmail.com</a>
+                            </p>
                         </div>
                     </div>
                 </div>
