--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -33,7 +33,7 @@
     <header class="header__main">
         <div class="navbar">
             <div class="brand_logo">
-                 <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
+                <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
             </div>
             <nav id="navMenu">
                 <ul>
@@ -53,7 +53,6 @@
                 <span class="navbar__toggle-icon"></span>
                 <span class="navbar__toggle-icon"></span>
             </button>
-
         </div>
     </header>
     <!-- Header Section End -->
@@ -170,7 +169,7 @@
     </section>
     <!-- Privacy Policy Section End -->
 
-     <!-- Footer Section Start -->
+    <!-- Footer Section Start -->
     <footer class="footer" data-aos="fade-up" data-aos-duration="1200">
         <div class="footer__container">
             <!-- Top Section with Navigation -->
@@ -178,7 +177,7 @@
                 <!-- Brand Column -->
                 <div class="footer-brand">
                     <div class="footer-brand__logo">
-                         <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
+                        <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
                     </div>
                     <p class="footer-brand__description">
                         Fast, reliable & professional 24/7 plumbing & rooter services.
@@ -190,8 +189,8 @@
                     <h3 class="footer-column__title">Explore</h3>
                     <ul class="footer-column__list">
                         <li><a href="index.html" class="footer-column__link">Home</a></li>
-                         <li><a href="index.html#location__section" class="footer-column__link">Location</a></li>
-                        <li><a href="index.html#services" class="footer-column__link">Services</a></li>
+                        <li><a href="index.html#location__section" class="footer-column__link">Location</a></li>
+                        <li><a href="services.html" class="footer-column__link">Services</a></li>
                         <li><a href="index.html#faqs" class="footer-column__link">FAQ</a></li>
                     </ul>
                 </div>
@@ -273,7 +272,8 @@
                         <div class="contact-info">
                             <h4 class="contact-info__label">Email</h4>
                             <p> <a href="mailto:hallo.test@gmail.com"
-                                    class="footer-column__link">hallo.test@gmail.com</a></p>
+                                    class="footer-column__link">hallo.test@gmail.com</a>
+                            </p>
                         </div>
                     </div>
                 </div>
