--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
     <header class="header__main">
         <div class="navbar">
             <div class="brand_logo">
-                 <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
+                <a href="index.html"><span>Qnix</span><span>Rooter</span></a>
             </div>
             <nav id="navMenu">
                 <ul>
@@ -44,10 +44,8 @@
                 </ul>
             </nav>
             <div class="get_btn" id="getBtn">
-                <a href="#" class="btn">
-                    <img src="assets/images/btn-svg.png" alt="Get Template" />
-                    <span>Get Template</span>
-                </a>
+                <a href="#" class="btn"><img src="assets/images/btn-svg.png" alt="Get Template" /><span>Get
+                        Template</span> </a>
             </div>
             <!-- Mobile Toggle Button -->
             <button class="navbar__toggle" id="navbarToggle" aria-label="Toggle navigation">
@@ -60,7 +58,7 @@
     <!-- Header Section End -->
 
     <!-- Services Section Start -->
-    <section class="services__section mt-100 pt-80 pb-80">
+    <section class="services__section pt-80 pb-80 mt-100" id="services">
         <div class="auto-container">
             <div class="services__header">
                 <div class="section__header">
@@ -74,6 +72,7 @@
                         </svg>
                         Services</span>
                     <h2 class="main-title">Our Services</h2>
+
                 </div>
                 <div class="services__tabs">
                     <button class="services__tab services__tab--active" data-tab="residential">Residential</button>
@@ -100,7 +99,8 @@
                         alt="Emergency Plumbing">
                 </article>
 
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
+                    onclick="window.location.href='drain-cleaning.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">Drain Cleaning</h3>
@@ -115,7 +115,8 @@
                         alt="Drain Cleaning">
                 </article>
 
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000" data-aos="fade-up"
+                    data-aos-duration="1000" onclick="window.location.href='water-heaters.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">Water Heaters</h3>
@@ -131,7 +132,8 @@
                         alt="Water Heaters">
                 </article>
 
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
+                    onclick="window.location.href='bathroom-kitchen.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">Bathroom & Kitchen</h3>
@@ -147,7 +149,8 @@
                         alt="Bathroom & Kitchen">
                 </article>
 
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
+                    onclick="window.location.href='leak-detection.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">Leak Detection</h3>
@@ -163,7 +166,8 @@
                         alt="Leak Detection">
                 </article>
 
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
+                    onclick="window.location.href='sewer-septic.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">Sewer & Septic</h3>
@@ -178,7 +182,8 @@
                         alt="Sewer & Septic">
                 </article>
 
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
+                    onclick="window.location.href='garbage-disposal.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">Garbage Disposal</h3>
@@ -194,7 +199,8 @@
                         alt="Garbage Disposal">
                 </article>
 
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
+                    onclick="window.location.href='repiping.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">Repiping</h3>
@@ -213,7 +219,8 @@
 
             <!-- Commercial Services Grid -->
             <div class="services__grid services__grid--hidden" id="commercial-grid">
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
+                    onclick="window.location.href='drain-sewer.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">Drain & Sewer</h3>
@@ -229,7 +236,8 @@
                         alt="Commercial Plumbing Systems">
                 </article>
 
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
+                    onclick="window.location.href='grease-traps.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">Grease Traps</h3>
@@ -245,7 +253,8 @@
                         alt="Industrial Pipe Installation">
                 </article>
 
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
+                    onclick="window.location.href='high-capacity-water-heaters.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">high-capacity water heaters</h3>
@@ -261,7 +270,8 @@
                         alt="Restaurant Plumbing">
                 </article>
 
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
+                    onclick="window.location.href='pipe-fixtures.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">Pipe & Fixtures</h3>
@@ -278,7 +288,8 @@
                         alt="Backflow Prevention">
                 </article>
 
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
+                    onclick="window.location.href='maintenance-plans.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">Maintenance Plans</h3>
@@ -294,7 +305,8 @@
                         alt="Grease Trap Services">
                 </article>
 
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
+                    onclick="window.location.href='backflow-testing.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">Backflow Testing</h3>
@@ -310,7 +322,8 @@
                         alt="Water Line Repair">
                 </article>
 
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
+                    onclick="window.location.href='gas-lines.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title"> Gas Lines</h3>
@@ -326,7 +339,8 @@
                         alt="Hydro Jetting">
                 </article>
 
-                <article class="service-card" data-aos="fade-up" data-aos-duration="1000">
+                <article class="service-card" data-aos="fade-up" data-aos-duration="1000"
+                    onclick="window.location.href='hydro-jetting.html'">
                     <div class="service-card__content">
                         <div class="service-card__header">
                             <h3 class="service-card__title">Hydro Jetting</h3>
@@ -473,6 +487,8 @@
     <!-- Our Location Section End -->
 
     <!-- Footer Section Start -->
+
+    <!-- Footer Section Start -->
     <footer class="footer" data-aos="fade-up" data-aos-duration="1200">
         <div class="footer__container">
             <!-- Top Section with Navigation -->
@@ -493,7 +509,7 @@
                     <ul class="footer-column__list">
                         <li><a href="index.html" class="footer-column__link">Home</a></li>
                         <li><a href="index.html#location__section" class="footer-column__link">Location</a></li>
-                        <li><a href="index.html#services" class="footer-column__link">Services</a></li>
+                        <li><a href="services.html" class="footer-column__link">Services</a></li>
                         <li><a href="index.html#faqs" class="footer-column__link">FAQ</a></li>
                     </ul>
                 </div>
@@ -575,7 +591,8 @@
                         <div class="contact-info">
                             <h4 class="contact-info__label">Email</h4>
                             <p> <a href="mailto:hallo.test@gmail.com"
-                                    class="footer-column__link">hallo.test@gmail.com</a></p>
+                                    class="footer-column__link">hallo.test@gmail.com</a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -589,7 +606,6 @@
             </div>
         </div>
     </footer>
-
     <!-- Footer Section End -->
 
     <!-- JavaScript Library -->
@@ -606,7 +622,5 @@
         AOS.init();
     </script>
 
-
 </body>
-
 </html>
